--- a/Z-Knight/src/main/resources/cluster.properties
+++ b/Z-Knight/src/main/resources/cluster.properties
@@ -22,6 +22,8 @@
 # SOFTWARE.
 #
 z.chess.elect_in_second=5S
+z.chess.snapshot_in_second=60S
+z.chess.snapshot_min_size=50MB
 z.chess.uid.idc_id=1
 z.chess.uid.cluster_id=1
 z.chess.uid.node_id=1
