--- a/Z-Knight/src/main/resources/db.properties
+++ b/Z-Knight/src/main/resources/db.properties
@@ -38,7 +38,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.format_sql=true
 #
-spring.datasource.url=jdbc:postgresql://localhost/tgx.z-chess
+spring.datasource.url=jdbc:postgresql://192.168.10.10/tgx.z-chess
 spring.datasource.username=tgx.z-chess.pgsql
 spring.datasource.password=2da790253022bd05cddda6d06bdc1e60
 spring.jpa.properties.hibernate.default_schema="tgx-z-chess"
