--- a/Z-Knight/src/main/resources/cluster.properties
+++ b/Z-Knight/src/main/resources/cluster.properties
@@ -26,14 +26,13 @@ z.chess.heartbeat_in_second=15S
 z.chess.snapshot_in_second=60S
 z.chess.snapshot_min_size=50MB
 z.chess.bind=0.0.0.0:5228
+z.chess.peer_test=192.168.10.10:22
+z.chess.gate_test=192.168.10.10:22
 z.chess.uid.idc_id=1
 z.chess.uid.cluster_id=1
-#z.chess.uid.node_id=0
 z.chess.uid.type=2
-#z.chess.peers[0]=192.168.10.11:5228
-#z.chess.peers[1]=192.168.10.12:5228
-#z.chess.peers[2]=192.168.10.13:5228
-#z.chess.peers[3]=192.168.10.10:5228
-#z.chess.peers[4]=192.168.10.10:5228
+z.chess.peers[0]=192.168.10.11:5228
+z.chess.peers[1]=192.168.10.12:5228
+z.chess.peers[2]=192.168.10.13:5228
 #z.chess.gates[] ;key for routers between device's clusters
 #z.chess.gates[0]=172.10.10.23:5300
