--- a/Z-Knight/src/main/resources/cluster.properties
+++ b/Z-Knight/src/main/resources/cluster.properties
@@ -21,18 +21,18 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-z.chess.elect_in_second=5S
-z.chess.heartbeat_in_second=15S
-z.chess.snapshot_in_second=60S
-z.chess.snapshot_min_size=50MB
-z.chess.bind=0.0.0.0:5228
-z.chess.peer_test=192.168.10.10:22
-z.chess.gate_test=192.168.10.10:22
-z.chess.uid.idc_id=1
-z.chess.uid.cluster_id=1
-z.chess.uid.type=2
-z.chess.peers[0]=192.168.10.11:5228
-z.chess.peers[1]=192.168.10.12:5228
-z.chess.peers[2]=192.168.10.13:5228
-#z.chess.gates[] ;key for routers between device's clusters
-#z.chess.gates[0]=172.10.10.23:5300
+z.chess.cluster.elect_in_second=5S
+z.chess.cluster.heartbeat_in_second=15S
+z.chess.cluster.snapshot_in_second=60S
+z.chess.cluster.snapshot_min_size=50MB
+z.chess.cluster.bind=0.0.0.0:5228
+z.chess.cluster.peer_test=192.168.10.10:22
+z.chess.cluster.gate_test=192.168.10.10:22
+z.chess.cluster.uid.idc_id=1
+z.chess.cluster.uid.cluster_id=1
+z.chess.cluster.uid.type=2
+z.chess.cluster.peers[0]=192.168.10.11:5228
+z.chess.cluster.peers[1]=192.168.10.12:5228
+z.chess.cluster.peers[2]=192.168.10.13:5228
+#z.chess.cluster.gates[] ;key for routers between device's clusters
+#z.chess.cluster.gates[0]=172.10.10.23:5300
