--- a/Z-Knight/src/main/resources/cluster.properties
+++ b/Z-Knight/src/main/resources/cluster.properties
@@ -21,6 +21,7 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
+z.chess.cluster.cluster_model=true
 z.chess.cluster.elect_in_second=3S
 #heartbeat_in_second = 3 * elect_in_second
 z.chess.cluster.heartbeat_in_second=9S
