--- a/Z-Pawn/src/main/resources/application.properties
+++ b/Z-Pawn/src/main/resources/application.properties
@@ -24,5 +24,7 @@
 server.port=8090
 spring.jackson.property-naming-strategy=SNAKE_CASE
 spring.output.ansi.enabled=ALWAYS
-z.chess.cluster.peers[0]=192.168.100.200:5228
-z.chess.cluster.peers[1]=192.168.100.100:5228
+z.chess.cluster.peers[0]=192.168.56.100:5228
+z.chess.cluster.peers[1]=192.168.56.1:5228
+z.chess.cluster.peer_test=192.168.56.100:22
+spring.datasource.url=jdbc:postgresql://192.168.56.100:5432/tgx.z-chess
