--- a/Z-Pawn/src/main/resources/application.properties
+++ b/Z-Pawn/src/main/resources/application.properties
@@ -27,4 +27,5 @@ spring.output.ansi.enabled=ALWAYS
 z.chess.cluster.peers[0]=192.168.56.100:5228
 z.chess.cluster.peers[1]=192.168.56.1:5228
 z.chess.cluster.peer_test=192.168.56.100:22
-spring.datasource.url=jdbc:postgresql://192.168.56.100:5432/tgx.z-chess
+z.chess.cluster.cluster_model=true
+#spring.datasource.url=jdbc:postgresql://192.168.56.100:5432/tgx.z-chess
