--- a/pom.xml
+++ b/pom.xml
@@ -263,6 +263,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <directory>${user.home}/Z-Chess/${project.name}/target</directory>
     </build>
     <distributionManagement>
         <repository>
