--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
         <hibernate-enhance-maven-plugin.version>6.4.4.Final</hibernate-enhance-maven-plugin.version>
         <build-helper-maven-plugin.version>3.5.0</build-helper-maven-plugin.version>
         <maven.compiler.debug>true</maven.compiler.debug>
+        <fastjson.version>2.0.32</fastjson.version>
     </properties>
     <profiles>
         <profile>
@@ -457,6 +458,11 @@
                 <groupId>com.networknt</groupId>
                 <artifactId>json-schema-validator</artifactId>
                 <version>${json-schema-validator.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.fastjson2</groupId>
+                <artifactId>fastjson2</artifactId>
+                <version>${fastjson.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
